# octo-logger-cpp

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: linux.yml  mac.yml  windows.yml
cmake/: ConfigOptions.cmake  LoadConanBuildInfo.cmake
examples/: CMakeLists.txt
examples/src/: basic_logger.cpp  sink_options.cpp
include/octo-logger-cpp/: channel-view.hpp  channel.hpp  compat.hpp  config-utils.hpp  context-info.hpp  fork-safe-mutex.hpp  log-level.hpp  log.hpp  logger-test-definitions.hpp  logger.hpp  manager-config.hpp  manager.hpp  sink-config.hpp  sink-factory.hpp  sink.hpp  trace-logger.hpp
include/octo-logger-cpp/aws/: aws-log-system.hpp  cloudwatch-sink.hpp
include/octo-logger-cpp/sinks/: console-json-sink.hpp  console-sink.hpp  file-sink.hpp  syslog-sink.hpp
src/: channel.cpp  compat.cpp  context-info.cpp  fork-safe-mutex.cpp  log.cpp  logger.cpp  manager-config.cpp  manager.cpp  sink-config.cpp  sink-factory.cpp  sink.cpp
src/aws/: aws-log-system.cpp  cloudwatch-sink.cpp
src/sinks/: console-json-sink.cpp  console-sink.cpp  file-sink.cpp  syslog-sink.cpp
unittests/: CMakeLists.txt
unittests/include/: catch2-matchers.hpp  catch2_matchers.hpp  cloudwatch-sink-mock.hpp  dummy-sink.hpp  log-mock.hpp  logger-mock.hpp
unittests/src/: cloudwatch-sink-tests.cpp  localtime-safe-tests.cpp  log-tests.cpp  logger-logging-test.cpp  logger-tests.cpp  logging-tests.cpp  performance.cpp  sink-config-options-tests.cpp  test.cpp
unittests/src/sinks/: console-json-sink-tests.cpp
